# promap

./: .gitignore  CLAUDE.md  build-all-win.sh  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
docs/: design.md  ideas.md  todos.md
native/promap-renderer/: Cargo.toml  Dockerfile.windows  build-win.sh
native/promap-renderer/src/: ipc.rs  main.rs  projection.rs  protocol.rs  renderer.rs  shapes.rs  video.rs
src/main/: index.ts  prolink.ts
src/preload/: index.ts
src/renderer/: external.html  external.ts  index.html  main.ts  styles.css
src/renderer/audio/: audio-analyzer.ts  midi-sync.ts  prolink-bridge.ts  timecode.ts
src/renderer/canvas/: canvas-manager.ts  custom-filters.ts
src/renderer/components/: app-shell.ts  canvas-panel.ts  color-modal.ts  controls-panel.ts  group-modal.ts  group-options-panel.ts  mask-position-modal.ts  midi-test-panel.ts  pixabay-modal.ts  project-screen.ts  projector-modal.ts  resources-panel.ts  right-panel.ts  shape-options-panel.ts  shortcuts-modal.ts  text-modal.ts  timeline-panel.ts
src/renderer/state/: state-manager.ts
src/renderer/types/: index.ts  promap-api.ts
src/renderer/utils/: stl-renderer.ts  svg-parser.ts
