[package]
name = "promap-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25"
winit = "0.30"
ffmpeg-next = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
earcutr = "0.4"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
